--- a/Web-page/home.html
+++ b/Web-page/home.html
@@ -103,10 +103,7 @@
 			<td width="70%" class="a2" bgcolor="#FFFFFF">
 				<p class="c1">
 					Даннаый сайт оформлен на тему: "Три события, которые меня удивили".
-					Почему выбрана именно такая тема? Ну, есть ряд факторов, которые повлияли
-					на выбор. Я не буду их затрагивать, а просто скажу, что данная работа, возможно,
-					поможет выразить и узнать что-то новое. Сам процесс верстрки был довольно таки увлекательным, но трудоемким. Так что, предлагаю перейти
-					к подготовленным событиям и оценить работу. Для этого ознакомьтесь с верхней панелью или используйте "портал" ниже. Удачного путешествия!
+					Предлагаю перейти к подготовленным событиям и оценить работу. Для этого ознакомьтесь с верхней панелью или используйте "портал" ниже. Удачного путешествия!
 				</p>
 				<a href="1.html"><img src="images_1/lb.gif" style="display: block; margin: 0 auto; border-radius: 15px" width="100%"></a>
 				<br>
